syntax = "proto3";

package auth;

service Auth {
  rpc Authenticate (AuthRequest) returns (AuthResponse) {}
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse) {}
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int32 userId = 1;
  string message = 2;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool isValid = 1;
}